unify create button

--- a/webui/index.html
+++ b/webui/index.html
@@ -118,7 +118,7 @@
                   <h3>NetAlias </h3>
                 </div>
                 <hr>
-                <button type="button" class="btn btn-outline-primary" onclick="GeneralCreate('NetAlias');"> Create <i class="fa fa-plus"></i></button>
+                <button type="button" class="btn btn-primary" onclick="GeneralCreate('NetAlias');"> <i class="fa fa-plus"></i> Create </button>
                 <div class="col-md-12 my-5" id="netalias-table">
                   <!-- NET ALIAS -->
                 </div>
@@ -128,7 +128,7 @@
                   <h3>Network Control List </h3>
                 </div>
                 <hr>
-                <button type="button" class="btn btn-outline-primary" onclick="GeneralCreate('AccessControl');"> Create <i class="fa fa-plus"></i></button>
+                <button type="button" class="btn btn-primary" onclick="GeneralCreate('AccessControl');"><i class="fa fa-plus"></i> Create </button>
                 <div class="col-md-12 my-5" id="acl-table">
                   <!-- ACCESS CONTROL -->
                 </div>
@@ -139,7 +139,7 @@
                   <h3>Media Class </h3>
                 </div>
                 <hr>
-                <button type="button" class="btn btn-outline-primary" onclick="GeneralCreate('MediaClass');">Create <i class="fa fa-plus"></i></button>
+                <button type="button" class="btn btn-primary" onclick="GeneralCreate('MediaClass');"><i class="fa fa-plus"></i> Create </button>
                 <div class="col-md-12 my-5" id="media-class-table">
                   <!-- MEDIA CLASS -->
                 </div>           
@@ -149,7 +149,7 @@
                   <h3>Capacity Class </h3>
                 </div>
                 <hr>
-                <button type="button" class="btn btn-outline-primary" onclick="GeneralCreate('CapacityClass');">Create <i class="fa fa-plus"></i></button>
+                <button type="button" class="btn btn-primary" onclick="GeneralCreate('CapacityClass');"><i class="fa fa-plus"></i> Create </button>
                 <div class="col-md-12 my-5" id="capacity-class-table">
                   <!-- CAPACITY CLASS -->
                 </div>           
@@ -159,7 +159,7 @@
                   <h3>Translation Rules </h3>
                 </div>
                 <hr>
-                <button type="button" class="btn btn-outline-primary" onclick="GeneralCreate('TranslationClass');">Create <i class="fa fa-plus"></i></button>
+                <button type="button" class="btn btn-primary" onclick="GeneralCreate('TranslationClass');"><i class="fa fa-plus"></i> Create </button>
                 <div class="col-md-12 my-5" id="translation-class-table">
                   <!-- TRANSLATIONS CLASS -->
                 </div>
@@ -169,7 +169,7 @@
                   <h3>Manipulation Rules </h3>
                 </div>
                 <hr>
-                <button type="button" class="btn btn-outline-primary" onclick="GeneralCreate('ManipulationClass');">Create <i class="fa fa-plus"></i></button>
+                <button type="button" class="btn btn-primary" onclick="GeneralCreate('ManipulationClass');"><i class="fa fa-plus"></i> Create </button>
                 <div class="col-md-12 my-5" id="manipulation-class-table">
                   <!-- MANIPULATION CLASS -->
                 </div>
@@ -179,7 +179,7 @@
                   <h3>PreAnswer Class </h3>
                 </div>
                 <hr>
-                <button type="button" class="btn btn-outline-primary" onclick="GeneralCreate('PreAnswerClass');">Create <i class="fa fa-plus"></i></button>
+                <button type="button" class="btn btn-primary" onclick="GeneralCreate('PreAnswerClass');"><i class="fa fa-plus"></i> Create </button>
                 <div class="col-md-12 my-5" id="preanswer-class-table">
                   <!-- PREANSWER CLASS -->
                 </div>
@@ -190,7 +190,7 @@
                   <h3>SIP Profile </h3>
                 </div>
                 <hr>
-                <button type="button" class="btn btn-outline-primary" onclick="GeneralCreate('SIPProfile');">Create <i class="fa fa-plus"></i></button>
+                <button type="button" class="btn btn-primary" onclick="GeneralCreate('SIPProfile');"><i class="fa fa-plus"></i> Create </button>
                 <div class="col-md-12 my-5" id="sipprofile-table">
                   <!-- SIP PROFILE -->
                 </div>           
@@ -200,7 +200,7 @@
                   <h3>Inbound Interconnect </h3>
                 </div>
                 <hr>
-                <button type="button" class="btn btn-outline-primary" onclick="GeneralCreate('Inbound');">Create <i class="fa fa-plus"></i></button>
+                <button type="button" class="btn btn-primary" onclick="GeneralCreate('Inbound');"><i class="fa fa-plus"></i> Create </button>
                 <div class="col-md-12 my-5" id="inbound-intcon-table">
                   <!-- INBOUND INTERCONNECT -->
                 </div>           
@@ -210,7 +210,7 @@
                   <h3>Outbound Interconnect </h3>
                 </div>
                 <hr>
-                <button type="button" class="btn btn-outline-primary" onclick="GeneralCreate('Outbound');">Create <i class="fa fa-plus"></i></button>
+                <button type="button" class="btn btn-primary" onclick="GeneralCreate('Outbound');"><i class="fa fa-plus"></i> Create </button>
                 <div class="col-md-12 my-5" id="outbound-intcon-table">
                   <!-- OUTBOUND INTERCONNECT -->
                 </div>           
@@ -220,7 +220,7 @@
                   <h3>Gateway </h3>
                 </div>
                 <hr>
-                <button type="button" class="btn btn-outline-primary" onclick="GeneralCreate('Gateway');">Create <i class="fa fa-plus"></i></button>
+                <button type="button" class="btn btn-primary" onclick="GeneralCreate('Gateway');"><i class="fa fa-plus"></i> Create </button>
                 <div class="col-md-12 my-5" id="gateway-table">
                   <!-- GATEWAY INTERCONNECT -->
                 </div>           
@@ -230,7 +230,7 @@
                   <h3>Access Service </h3>
                 </div>
                 <hr>
-                <button type="button" class="btn btn-outline-primary" onclick="GeneralCreate('AccessService');">Create <i class="fa fa-plus"></i></button>
+                <button type="button" class="btn btn-primary" onclick="GeneralCreate('AccessService');"><i class="fa fa-plus"></i> Create </button>
                 <div class="col-md-12 my-5" id="access-service-table">
                   <!-- ACCESS SERVICE -->
                 </div>           
@@ -240,7 +240,7 @@
                   <h3>Access Domain Policy </h3>
                 </div>
                 <hr>
-                <button type="button" class="btn btn-outline-primary" onclick="GeneralCreate('AccessDomainPolicy');">Create <i class="fa fa-plus"></i></button>
+                <button type="button" class="btn btn-primary" onclick="GeneralCreate('AccessDomainPolicy');"><i class="fa fa-plus"></i> Create </button>
                 <div class="col-md-12 my-5" id="access-domain-policy-table">
                   <!-- ACCESS DOMAIN POLICY -->
                 </div>           
@@ -250,7 +250,7 @@
                   <h3>Access User Directory </h3>
                 </div>
                 <hr>
-                <button type="button" class="btn btn-outline-primary" onclick="GeneralCreate('AccessUserDirectory');">Create <i class="fa fa-plus"></i></button>
+                <button type="button" class="btn btn-primary" onclick="GeneralCreate('AccessUserDirectory');"><i class="fa fa-plus"></i> Create </button>
                 <div class="col-md-12 my-5" id="access-user-directory-table">
                   <!-- ACCESS USER DIRECTORY -->
                 </div>
@@ -260,36 +260,11 @@
                     <h3>Routing </h3>
                   </div>
                   <hr>
-                  <button type="button" class="btn btn-outline-primary" onclick="GeneralCreate('RoutingTable');" 
-                    data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="create new routing table"> Create
-                  </button>
+                  <button type="button" class="btn btn-primary" onclick="GeneralCreate('RoutingTable');"><i class="fa fa-plus"></i> Create </button>
                   <br><br>
                   <!--- BEGIN: ROUTING DATA -->
                   <div class="accordion" id="routing-presentation-object">
-                  <!--
-                    <div class="accordion-item">    
-                      <h2 class="accordion-header" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="tyel">
-                        <button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#collapseRTBL1">
-                          <span class="text-primary fw-bolder">Goto</span> &nbsp;&nbsp;
-                          <span class="badge rounded-pill text-bg-danger">httpr</span> &nbsp;&nbsp;
-                          description for routing table1
-                        </button>
-                      </h2>
-                      <div id="collapseRTBL1" class="accordion-collapse collapse">
-                        <div class="accordion-body">
-                          <div class="col-md-6 col-lg-6">
-                            <ul class="list-group list-group-flush">
-                              <li class="list-group-item">Name</li>
-                              <li class="list-group-item">Description</li>
-                              <li class="list-group-item">Action</li>
-                              <li class="list-group-item">Primary</li>
-                              <li class="list-group-item">Secondary</li>
-                            </ul>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  -->
+                    <!-- ROUTING DATA -->
                   </div>
                   <!--- END: ROUTING DATA -->                
               </div>
