relayout logo and bar

--- a/webui/index.html
+++ b/webui/index.html
@@ -18,11 +18,11 @@
   </head>
   <body onload="GetPresentNode();">
     <!-- HEADER ––––––––––––––––––––––––––––––––––––––––––––––––––--------- -->
-    <div class="py-3 mb-4 border-bottom">
+    <div class="py-1 mb-4 border-bottom">
       <header class="container d-flex flex-wrap justify-content-center ">
         <a href="" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-          <img class="d-flex align-items-center text-dark text-decoration-none" width="40" src="/assets/images/default.png" alt="LibreSBC">
-          <span class="fs-4 fw-light text-muted">&nbsp;&nbsp;<em>libresbc</em></span>
+          <img class="d-flex align-items-center text-dark text-decoration-none" width="44" src="/assets/images/default.png" alt="LibreSBC">
+          <span class="fs-4 fw-lighter text-muted">&nbsp;libresbc</span>
         </a>
         <ul class="nav nav-pills">
           <!-- HOME -->
