--- a/webui/index.html
+++ b/webui/index.html
@@ -294,14 +294,17 @@
           <p class="mb-1">&copy; 2023 <span><a href="https://github.com/hnimminh/libresbc">LIBRESBC</a>🗽</span></p>
           <br>
           <div class="alert alert-light alert-dismissible fade show text-muted" role="alert">
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" 
+              data-bs-toggle="tooltip" data-bs-html="true" data-bs-custom-class="custom-tooltip"
+              data-bs-title="<em>let me know if this message is not appropriate for you</em>"
+              onclick="$('.tooltip').remove();">
+            </button>
             <p><em>
-              Your support allows me to create a free software that secure your voice infrastructure and worry-free experience. 
+              Your support allows me to create a free software that secure your voice infrastructure and worry-free experience.
               Help us keep LibreSBC going for years to come and get access to more features.
             </em></p>
             <a href="https://github.com/sponsors/hnimminh" class="btn btn-outline-danger" tabindex="-1"><i class="fa fa-heart"></i><code> Support</code></a>
           </div>
-          <!--<div class="bd-callout bd-callout-info"></div> -->
         </footer>
       </div>
     </div>
