enable apidoc for libreui

--- a/webui/index.html
+++ b/webui/index.html
@@ -71,6 +71,9 @@
             <a href="" class="nav-link" id="cfg-routing-tab" data-bs-toggle="tab" data-bs-target="#nav-cfg-routing" type="button" 
             role="tab" aria-controls="nav-cfg-routing" aria-selected="false" onclick="GeneralGetPresent('RoutingTable');">Routing</a>
           </li>
+          <li class="nav-item">
+            <a href="/apidocs" class="nav-link"  type="button" role="tab"><i class="fa  fa-info-circle"></i></a>
+          </li>
         </ul>
       </header>
     </div>
@@ -296,7 +299,7 @@
           <div class="alert alert-light alert-dismissible fade show text-muted" role="alert">
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" 
               data-bs-toggle="tooltip" data-bs-html="true" data-bs-custom-class="custom-tooltip"
-              data-bs-title="<em>let me know if this message is not appropriate for you</em>"
+              data-bs-title="<em>Dismiss! <br> please let me (libresbc) know if this is not appropriate for you</em>"
               onclick="$('.tooltip').remove();">
             </button>
             <p><em>
