docker way as default

--- a/webui/index.html
+++ b/webui/index.html
@@ -296,7 +296,7 @@
         </main>
         <!-- FOOTER ––––––––––––––––––––––––––––––––––––––––––––––––––--------- -->
         <footer class="my-1 pt-5 text-muted text-center text-small">
-          <p class="mb-1">&copy; 2023 <span><a href="https://github.com/hnimminh/libresbc">LIBRESBC</a>🗽</span></p>
+          <p class="mb-1">&copy; <span><a href="https://github.com/hnimminh/libresbc">LIBRESBC</a>🗽</span></p>
           <br>
           <div class="alert alert-light alert-dismissible fade show text-muted" role="alert">
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" 
